# sfml_minigame

./: CMakeLists.txt  Readme.md
src/: GameController.h  PlaneteCreator.cpp  PlaneteCreator.h  PlaneteMap.h  PlaneteTextureInfos.h  main.cpp
textures/worlds/: description.txt
